# Datos2-TE-2

C++/: main.cpp
C++/AbstractFactory/: AppleButton.cpp  AppleButton.h  AppleFactory.cpp  AppleFactory.h  AppleTaskBar.cpp  AppleTaskBar.h  CMakeLists.txt  Factory.cpp  Factory.h  LinuxButton.cpp  LinuxButton.h  LinuxFactory.cpp  LinuxFactory.h  LinuxTaskBar.cpp  LinuxTaskBar.h  User.cpp  User.h  Widget.cpp  Widget.h  WindowsButton.cpp  WindowsButton.h  WindowsFactory.cpp  WindowsFactory.h  WindowsTaskBar.cpp  WindowsTaskBar.h  main.cpp
C++/Adapter/: CMakeLists.txt  main.cpp
C++/Facade/: main.cpp
Rust/: Builder-Observer
Rust/AbstractFactory/: Cargo.toml
Rust/AbstractFactory/src/: main.rs
Rust/Rust/: Adapter.rs  main.rs
